--- a/2/day2_构造函数_原型对象/面试题1.md
+++ b/2/day2_构造函数_原型对象/面试题1.md
@@ -1,155 +1,113 @@
-🧨 陷阱题 1：点语法 ≠ 变量访问（死亡率 90%）
+1️⃣ 构造函数和普通函数有什么区别？
 
-❓题目
-const user = {
-  info: {
-    name: 'Tom'
-  }
+✅ 标准答案
+
+JavaScript 中构造函数本质上也是普通函数，区别在于调用方式。
+使用 new 调用时，会创建一个新对象，并将函数内部的 this 指向该对象。
+
+📌 关键点：
+	•	函数本身没有“构造”能力
+	•	new 赋予了构造行为
+
+⸻
+
+2️⃣ 使用 new 调用函数时，发生了什么？
+
+✅ 标准答案（必背）
+
+new 关键字会执行四个步骤：
+
+	1.	创建一个空对象
+	2.	将该对象的 __proto__ 指向构造函数的 prototype
+	3.	执行构造函数，绑定 this
+	4.	返回该对象（若构造函数返回引用类型，则返回该引用）
+
+⸻
+
+3️⃣ prototype 是什么？
+
+✅ 标准答案
+
+prototype 是构造函数的一个属性，用于存放实例共享的属性和方法。
+通过 prototype，可以避免每个实例都创建一份方法，节省内存。
+
+⸻
+
+4️⃣ proto 和 prototype 有什么区别？
+
+✅ 标准答案（高频）
+
+prototype 是构造函数的属性，用于定义实例共享内容；
+__proto__ 是实例对象的隐式属性，指向其构造函数的 prototype。
+
+📌 口诀：
+
+构造函数有 prototype，实例对象有 proto
+
+⸻
+
+5️⃣ constructor 属性有什么作用？
+
+✅ 标准答案
+
+constructor 指向创建该对象的构造函数，通常用于类型判断或实例还原。
+p.constructor === Person // true
+
+⚠️ 注意：
+	•	手动修改 prototype 时要修复 constructor 指向
+
+⸻
+
+6️⃣ 为什么方法要定义在 prototype 上，而不是构造函数里？
+
+✅ 标准答案（必杀）
+
+因为构造函数中的方法会在每次实例化时重新创建，而 prototype 上的方法被所有实例共享，能有效节省内存并提高性能。
+
+⸻
+
+7️⃣ 实例对象是如何访问到 prototype 上的方法的？
+
+✅ 标准答案
+
+当访问实例属性时，JS 会先查找实例自身属性，找不到则沿着 __proto__ 指向的 prototype 向上查找，形成原型链。
+
+⸻
+
+8️⃣ prototype 上的属性会被实例修改吗？
+
+✅ 标准答案
+
+实例对 prototype 属性的修改，本质是在实例上新增同名属性，不会影响 prototype 本身，除非直接修改引用类型。
+
+obj.x = 2 // 新增实例属性
+
+9️⃣ 如何判断某个属性是实例自己的，还是来自原型？
+
+✅ 标准答案
+	•	hasOwnProperty
+	•	in 运算符
+
+obj.hasOwnProperty('x') // 只检查实例
+'x' in obj // 包含原型
+
+
+⸻
+
+🔟 构造函数返回值会影响 new 的结果吗？
+
+✅ 标准答案
+
+如果构造函数返回基本类型，new 会忽略返回值；
+如果返回引用类型，则 new 的结果会被该返回值替代。
+function Test() {
+  return {}
 }
-
-const key = 'info'
-
-console.log(user.key.name)
-console.log(user[key].name)
-🤯 大多数人的直觉
-'Tom'
-'Tom'
-✅ 实际结果
-undefined
-'Tom'
+new Test() // 返回 {}
 
 ⸻
 
-💥 核心原因
-user.key        // 等价于 user['key']
-user[key]       // 等价于 user['info']
-👉 . 后面永远是字面量，不解析变量
+🔥 面试官加分总结（背下来）
 
-⸻
-
-🎯 面试反杀一句话
-
-点语法不会解析变量名，只有中括号才会把变量值当作属性 key。
-
-⸻
-
-🧨 陷阱题 2：解构 + 动态 key（高级翻车）
-
-❓题目
-
-const user = {
-  info: {
-    name: 'Tom'
-  }
-}
-
-const key = 'info'
-const { key: value } = user
-
-console.log(value?.name)
-
-⸻
-
-🤯 直觉理解
-
-key 是 ‘info’，value 应该是 user.info？
-
-✅ 实际结果
-
-undefined
-
-💥 核心原因
-const { key: value } = user
-等价于：
-value = user['key']
-而不是：
-value = user[key]
-👉 解构里的 key 也是“字面量属性名”
-
-⸻
-
-✅ 正确写法
-const value = user[key]
-console.log(value.name) // 'Tom'
-
-⸻
-
-🎯 面试反杀一句话
-
-对象解构不支持动态 key，解构里的属性名永远是写死的字符串。
-
-⸻
-
-🧨 陷阱题 3：可选链 + 中括号顺序陷阱（非常阴）
-const user = null
-
-console.log(user?.info.name)
-console.log(user?.['info'].name)
-
-⸻
-
-🤯 直觉理解
-
-都加了 ?.，应该都安全？
-
-⸻
-
-✅ 实际结果
-undefined
-❌ TypeError: Cannot read properties of undefined
-
-
-⸻
-
-💥 核心原因（非常重要）
-
-第一行（安全）：
-user?.info.name
-// 等价于：
-user == null ? undefined : user.info.name
-
-第二行（不安全）：
-
-user?.['info'].name
-// 等价于：
-(user?.['info']).name
-当：
-user?.['info'] // undefined
-接着访问：
-undefined.name // 💥 报错
-
-⸻
-
-✅ 正确写法
-user?.['info']?.name
-
-
-⸻
-
-🎯 面试反杀一句话
-
-可选链只保护它左侧的那一段表达式，链条中断点必须逐级写。
-
-⸻
-
-🔥 三题本质总结（送你一张心智模型）
-
-场景
-是否解析变量
-是否安全
-obj.key
-❌ 否
-❌
-obj[key]
-✅ 是
-❌
-obj?.key
-❌ 否
-✅
-obj?.[key]
-✅ 是
-⚠️
-obj?.[key]?.x
-✅ 是
-✅
-
+JavaScript 通过构造函数与 prototype 机制实现对象复用和继承，
+实例通过 __proto__ 形成原型链，实现属性和方法的逐层查找。
