--- a/2/day2_构造函数_原型对象/面试题2.md
+++ b/2/day2_构造函数_原型对象/面试题2.md
@@ -1,176 +1,110 @@
-	•	🔥 for…in / Object.keys + 访问陷阱
+💣 原型陷阱题（请先别急着看答案）
+function Foo() {}
 
-⸻
+Foo.prototype.a = 1
 
-🧨 陷阱 1：for…in 遍历到“你没定义的属性”
+const obj1 = new Foo()
+const obj2 = new Foo()
 
-❓题目
+obj1.a = 2
 
-Object.prototype.age = 18
+console.log(obj1.a) // ?
+console.log(obj2.a) // ?
 
-const user = {
-  name: 'Tom'
-}
+❌ 99% 的错误答案
 
-for (const key in user) {
-  console.log(key, user[key])
-}
-🤯 直觉
+2
+2
 
-只会打印 name？
+❌ 原因：
 
-⸻
+“a 在 prototype 上，改了一个实例，大家都会变”
 
-✅ 实际结果
-name Tom
-age 18
-
-⸻
-
-💥 核心原因（必考）
-	•	for…in 会遍历对象自身 + 原型链上的可枚举属性
-	•	Object.prototype.age 是可枚举的
-
-⸻
-
-❌ 常见错误写法（线上事故）
-
-for (const key in data) {
-  render(data[key]) // 💥 多渲染一个 age
-}
-
-⸻
-
-✅ 正确防御写法
-for (const key in user) {
-  if (Object.prototype.hasOwnProperty.call(user, key)) {
-    console.log(key, user[key])
-  }
-}
-🎯 面试反杀一句话
-
-for…in 会遍历原型链属性，必须配合 hasOwnProperty 使用。
-
-⸻
-
-⸻
-
-🧨 陷阱 2：Object.keys + undefined（90% 没意识到）
-
-❓题目
-const user = Object.create({
-  age: 18
-})
-
-user.name = 'Tom'
-
-Object.keys(user).forEach(key => {
-  console.log(key, user[key])
-})
-🤯 直觉
-
-应该能拿到 name 和 age？
-
-⸻
-
-✅ 实际结果
-name Tom
-
-⸻
-
-💥 核心原因
-	•	Object.keys 只返回对象自身的可枚举属性
-	•	不会遍历原型链
-
-  age 在原型上 ❌
-
-⸻
-
-🚨 易踩坑点
-Object.keys(user).length === 1
-但你以为有两个字段 → 逻辑 bug
-
-⸻
-
-🎯 面试反杀一句话
-
-Object.keys 只关心对象自身属性，不包含原型链。
-
-⸻
-
-⸻
-
-🧨 陷阱 3：for…in + 点语法（隐藏得最深）
-
-❓题目
-const user = {
-  name: 'Tom',
-  age: 18
-}
-
-for (const key in user) {
-  console.log(user.key)
-}
-
-🤯 直觉
-
-key 是 name / age，应该能打印值？
-
-⸻
-
-✅ 实际结果
-undefined
-undefined
-💥 核心原因（高频）
-user.key  // 永远访问的是 "key" 这个属性
-而不是：
-user[name]
-user[age]
+这是错的。
+✅ 正确答案
+2
+1
 
 
 ⸻
 
-✅ 正确写法
-for (const key in user) {
-  console.log(user[key])
-}
+🧠 为什么？（原型链执行全过程）
 
-⸻
-
-🎯 面试反杀一句话
-
-for…in 里的 key 是变量，访问属性必须用中括号。
+1️⃣ 初始结构
+obj1          obj2
+ │             │
+ │__proto__    │__proto__
+ ▼             ▼
+Foo.prototype = { a: 1 }
 
 
 ⸻
 
-🔥 终极对照表（建议背）
+2️⃣ 执行这一句（致命点）
+obj1.a = 2
 
-方法
-是否遍历原型
-是否只遍历自身
-是否要 hasOwnProperty
-for…in
-✅
-❌
-✅ 必须
-Object.keys
-❌
-✅
-❌
-Object.values
-❌
-✅
-❌
-Object.entries
-❌
-✅
-❌
+🔴 发生了什么？
+
+并不是修改 prototype 上的 a
+而是：
+在 obj1 自身上创建了一个新的属性 a
+
+现在结构变成 👇
+
+obj1 = { a: 2 }      obj2 = {}
+   │                  │
+   └── __proto__      └── __proto__
+          ▼                   ▼
+       Foo.prototype = { a: 1 }
+      
 
 
 ⸻
 
-🚀 面试官继续追问时，你可以主动加一句（加分）
+3️⃣ 再看取值顺序（面试加分点）
+obj1.a
 
-实际项目中如果只是遍历自身属性，优先用 Object.keys / entries；
-如果必须用 for…in，一定要显式过滤原型链属性，避免隐形 bug。
+查找顺序：
+	1.	先找 obj1 自身 → 找到 a = 2 ✅
+	2.	不会再往 prototype 上找
+
+  obj2.a
+
+  	1.	obj2 自身没有 a
+	2.	去 prototype → 找到 a = 1 ✅
+
+⸻
+
+🔥 一句话必杀总结（直接背）
+
+“读取属性会沿原型链向上找，
+但给实例赋值，只会作用在实例本身，不会影响原型。”
+
+🧨 面试官升级追问（90% 直接崩）
+
+❓ 那如果是这样呢？
+Foo.prototype.b = { x: 1 }
+
+obj1.b.x = 2
+
+console.log(obj2.b.x) // ?
+
+👉 正确答案是：
+2
+❗ 因为这次没有改引用指向，只是改了引用内部的值
+
+⸻
+
+🧠 终极区分口诀（原型地狱逃生用）
+
+操作
+结果
+obj.a = xxx
+在 obj 上创建/覆盖属性
+obj.a.x = xxx
+修改共享引用对象
+读属性
+沿原型链找
+写属性
+永远只写当前对象
+
