--- a/2/day1_JS对象类型与属性访问机制/面试题1.md
+++ b/2/day1_JS对象类型与属性访问机制/面试题1.md
@@ -1,54 +1,54 @@
 🧨 陷阱题 1：点语法 ≠ 变量访问（死亡率 90%）
 
-❓题目
-const user = {
-  info: {
-    name: 'Tom'
-  }
-}
+| ❓题目  | const user = { |
+| ------- | -------------- |
+| info: { | name: 'Tom'    |
+| }       | }              |
 
-const key = 'info'
+```js
+const key = "info";
 
-console.log(user.key.name)
-console.log(user[key].name)
-🤯 大多数人的直觉
-'Tom'
-'Tom'
-✅ 实际结果
-undefined
-'Tom'
+console.log(user.key.name);
+console.log(user[key].name);
+```
 
-⸻
+| 🤯 大多数人的直觉 | 'Tom'       |
+| ----------------- | ----------- |
+| 'Tom'             | ✅ 实际结果 |
+| undefined         | 'Tom'       |
+
+---
 
 💥 核心原因
-user.key        // 等价于 user['key']
-user[key]       // 等价于 user['info']
-👉 . 后面永远是字面量，不解析变量
+user.key // 等价于 user['key']
+user[key] // 等价于 user['info']
 
-⸻
+- . 后面永远是字面量，不解析变量
+
+---
 
 🎯 面试反杀一句话
 
-点语法不会解析变量名，只有中括号才会把变量值当作属性 key。
-
-⸻
+## 点语法不会解析变量名，只有中括号才会把变量值当作属性 key。
 
 🧨 陷阱题 2：解构 + 动态 key（高级翻车）
 
 ❓题目
 
+```js
 const user = {
-  info: {
-    name: 'Tom'
-  }
-}
+```
 
-const key = 'info'
-const { key: value } = user
+| info: {            | name: 'Tom'                 |
+| ------------------ | --------------------------- |
+| }                  | }                           |
+| const key = 'info' | const { key: value } = user |
 
-console.log(value?.name)
+```js
+console.log(value?.name);
+```
 
-⸻
+---
 
 🤯 直觉理解
 
@@ -58,48 +58,48 @@ key 是 ‘info’，value 应该是 user.info？
 
 undefined
 
-💥 核心原因
-const { key: value } = user
-等价于：
-value = user['key']
-而不是：
-value = user[key]
-👉 解构里的 key 也是“字面量属性名”
+| 💥 核心原因 | const { key: value } = user |
+| ----------- | --------------------------- |
+| 等价于：    | value = user['key']         |
+| 而不是：    | value = user[key]           |
 
-⸻
+- 解构里的 key 也是“字面量属性名”
+
+---
 
 ✅ 正确写法
-const value = user[key]
-console.log(value.name) // 'Tom'
 
-⸻
+```js
+const value = user[key];
+console.log(value.name); // 'Tom'
+```
+
+---
 
 🎯 面试反杀一句话
 
-对象解构不支持动态 key，解构里的属性名永远是写死的字符串。
-
-⸻
+## 对象解构不支持动态 key，解构里的属性名永远是写死的字符串。
 
 🧨 陷阱题 3：可选链 + 中括号顺序陷阱（非常阴）
-const user = null
 
-console.log(user?.info.name)
-console.log(user?.['info'].name)
+```js
+const user = null;
 
-⸻
+console.log(user?.info.name);
+console.log(user?.["info"].name);
+```
+
+---
 
 🤯 直觉理解
 
-都加了 ?.，应该都安全？
-
-⸻
+## 都加了 ?.，应该都安全？
 
 ✅ 实际结果
 undefined
 ❌ TypeError: Cannot read properties of undefined
 
-
-⸻
+---
 
 💥 核心原因（非常重要）
 
@@ -110,46 +110,29 @@ user == null ? undefined : user.info.name
 
 第二行（不安全）：
 
-user?.['info'].name
-// 等价于：
-(user?.['info']).name
-当：
-user?.['info'] // undefined
-接着访问：
-undefined.name // 💥 报错
+| user?.['info'].name         | // 等价于  |
+| --------------------------- | ---------- |
+| (user?.['info']).name       | 当：       |
+| user?.['info'] // undefined | 接着访问： |
 
-⸻
+## undefined.name // 💥 报错
 
 ✅ 正确写法
 user?.['info']?.name
 
-
-⸻
+---
 
 🎯 面试反杀一句话
 
-可选链只保护它左侧的那一段表达式，链条中断点必须逐级写。
-
-⸻
+## 可选链只保护它左侧的那一段表达式，链条中断点必须逐级写。
 
 🔥 三题本质总结（送你一张心智模型）
 
-场景
-是否解析变量
-是否安全
-obj.key
-❌ 否
-❌
-obj[key]
-✅ 是
-❌
-obj?.key
-❌ 否
-✅
-obj?.[key]
-✅ 是
-⚠️
-obj?.[key]?.x
-✅ 是
-✅
+| 场景       | 是否解析变量 | 是否安全 | obj.key       |
+| ---------- | ------------ | -------- | ------------- |
+| ❌ 否      | ❌           | obj[key] | ✅ 是         |
+| ❌         | obj?.key     | ❌ 否    | ✅            |
+| obj?.[key] | ✅ 是        | ⚠️       | obj?.[key]?.x |
 
+✅ 是
+✅
