--- a/2/day1_JS对象类型与属性访问机制/面试题2.md
+++ b/2/day1_JS对象类型与属性访问机制/面试题2.md
@@ -1,6 +1,6 @@
-	•	🔥 for…in / Object.keys + 访问陷阱
+- 🔥 for…in / Object.keys + 访问陷阱
 
-⸻
+---
 
 🧨 陷阱 1：for…in 遍历到“你没定义的属性”
 
@@ -8,167 +8,139 @@
 
 Object.prototype.age = 18
 
+```js
 const user = {
-  name: 'Tom'
-}
+```
 
-for (const key in user) {
-  console.log(key, user[key])
-}
-🤯 直觉
+| name: 'Tom'               | }                           |
+| ------------------------- | --------------------------- |
+| for (const key in user) { | console.log(key, user[key]) |
+| }                         | 🤯 直觉                     |
 
-只会打印 name？
-
-⸻
+## 只会打印 name？
 
 ✅ 实际结果
 name Tom
 age 18
 
-⸻
+---
 
 💥 核心原因（必考）
-	•	for…in 会遍历对象自身 + 原型链上的可枚举属性
-	•	Object.prototype.age 是可枚举的
 
-⸻
+- for…in 会遍历对象自身 + 原型链上的可枚举属性
+- Object.prototype.age 是可枚举的
+
+---
 
 ❌ 常见错误写法（线上事故）
 
 for (const key in data) {
-  render(data[key]) // 💥 多渲染一个 age
+render(data[key]) // 💥 多渲染一个 age
 }
 
-⸻
+---
 
-✅ 正确防御写法
-for (const key in user) {
-  if (Object.prototype.hasOwnProperty.call(user, key)) {
-    console.log(key, user[key])
-  }
-}
+| ✅ 正确防御写法                                        | for (const key in user) {   |
+| ------------------------------------------------------ | --------------------------- |
+| if (Object.prototype.hasOwnProperty.call(user, key)) { | console.log(key, user[key]) |
+| }                                                      | }                           |
+
 🎯 面试反杀一句话
 
-for…in 会遍历原型链属性，必须配合 hasOwnProperty 使用。
-
-⸻
-
-⸻
+## for…in 会遍历原型链属性，必须配合 hasOwnProperty 使用。
 
 🧨 陷阱 2：Object.keys + undefined（90% 没意识到）
 
 ❓题目
+
+```js
 const user = Object.create({
-  age: 18
+```
+
+age: 18
 })
 
 user.name = 'Tom'
 
 Object.keys(user).forEach(key => {
-  console.log(key, user[key])
+
+```js
+console.log(key, user[key]);
+```
+
 })
 🤯 直觉
 
-应该能拿到 name 和 age？
-
-⸻
+## 应该能拿到 name 和 age？
 
 ✅ 实际结果
 name Tom
 
-⸻
+---
 
 💥 核心原因
-	•	Object.keys 只返回对象自身的可枚举属性
-	•	不会遍历原型链
+
+- Object.keys 只返回对象自身的可枚举属性
+- 不会遍历原型链
 
   age 在原型上 ❌
 
-⸻
+---
 
 🚨 易踩坑点
 Object.keys(user).length === 1
 但你以为有两个字段 → 逻辑 bug
 
-⸻
+---
 
 🎯 面试反杀一句话
 
-Object.keys 只关心对象自身属性，不包含原型链。
-
-⸻
-
-⸻
+## Object.keys 只关心对象自身属性，不包含原型链。
 
 🧨 陷阱 3：for…in + 点语法（隐藏得最深）
 
 ❓题目
-const user = {
-  name: 'Tom',
-  age: 18
-}
-
-for (const key in user) {
-  console.log(user.key)
+| const user = { | name: 'Tom', |
+| --- | --- |
+| age: 18 | } |
+| for (const key in user) { | console.log(user.key) |
 }
 
 🤯 直觉
 
-key 是 name / age，应该能打印值？
+## key 是 name / age，应该能打印值？
 
-⸻
+| ✅ 实际结果                             | undefined           |
+| --------------------------------------- | ------------------- |
+| undefined                               | 💥 核心原因（高频） |
+| user.key // 永远访问的是 "key" 这个属性 | 而不是：            |
+| user[name]                              | user[age]           |
 
-✅ 实际结果
-undefined
-undefined
-💥 核心原因（高频）
-user.key  // 永远访问的是 "key" 这个属性
-而不是：
-user[name]
-user[age]
-
-
-⸻
+---
 
 ✅ 正确写法
 for (const key in user) {
-  console.log(user[key])
-}
 
-⸻
+```js
+console.log(user[key]);
+```
+
+## }
 
 🎯 面试反杀一句话
 
-for…in 里的 key 是变量，访问属性必须用中括号。
-
-
-⸻
+## for…in 里的 key 是变量，访问属性必须用中括号。
 
 🔥 终极对照表（建议背）
 
-方法
-是否遍历原型
-是否只遍历自身
-是否要 hasOwnProperty
-for…in
-✅
-❌
-✅ 必须
-Object.keys
-❌
-✅
-❌
-Object.values
-❌
-✅
-❌
-Object.entries
-❌
-✅
-❌
+| 方法           | 是否遍历原型 | 是否只遍历自身 | 是否要 hasOwnProperty |
+| -------------- | ------------ | -------------- | --------------------- |
+| for…in         | ✅           | ❌             | ✅ 必须               |
+| Object.keys    | ❌           | ✅             | ❌                    |
+| Object.values  | ❌           | ✅             | ❌                    |
+| Object.entries | ❌           | ✅             | ❌                    |
 
-
-⸻
+---
 
 🚀 面试官继续追问时，你可以主动加一句（加分）
 
