--- a/2/day2_构造函数_原型对象/面试题2.md
+++ b/2/day2_构造函数_原型对象/面试题2.md
@@ -1,15 +1,22 @@
 💣 原型陷阱题（请先别急着看答案）
+
+```js
 function Foo() {}
+```
 
 Foo.prototype.a = 1
 
-const obj1 = new Foo()
-const obj2 = new Foo()
+```js
+const obj1 = new Foo();
+const obj2 = new Foo();
+```
 
 obj1.a = 2
 
-console.log(obj1.a) // ?
-console.log(obj2.a) // ?
+```js
+console.log(obj1.a); // ?
+console.log(obj2.a); // ?
+```
 
 ❌ 99% 的错误答案
 
@@ -25,20 +32,16 @@ console.log(obj2.a) // ?
 2
 1
 
-
-⸻
+---
 
 🧠 为什么？（原型链执行全过程）
 
-1️⃣ 初始结构
-obj1          obj2
- │             │
- │__proto__    │__proto__
- ▼             ▼
-Foo.prototype = { a: 1 }
+| 1️⃣ 初始结构 | obj1 obj2                |
+| ----------- | ------------------------ |
+| │ │         | │**proto** │**proto**    |
+| ▼ ▼         | Foo.prototype = { a: 1 } |
 
-
-⸻
+---
 
 2️⃣ 执行这一句（致命点）
 obj1.a = 2
@@ -51,29 +54,25 @@ obj1.a = 2
 
 现在结构变成 👇
 
-obj1 = { a: 2 }      obj2 = {}
-   │                  │
-   └── __proto__      └── __proto__
-          ▼                   ▼
-       Foo.prototype = { a: 1 }
-      
+obj1 = { a: 2 } obj2 = {}
+│ │
+└── **proto** └── **proto**
+▼ ▼
+Foo.prototype = { a: 1 }
 
-
-⸻
+---
 
 3️⃣ 再看取值顺序（面试加分点）
 obj1.a
 
-查找顺序：
-	1.	先找 obj1 自身 → 找到 a = 2 ✅
-	2.	不会再往 prototype 上找
+查找顺序：1. 先找 obj1 自身 → 找到 a = 2 ✅ 2. 不会再往 prototype 上找
 
-  obj2.a
+obj2.a
 
-  	1.	obj2 自身没有 a
-	2.	去 prototype → 找到 a = 1 ✅
+1. obj2 自身没有 a
+2. 去 prototype → 找到 a = 1 ✅
 
-⸻
+---
 
 🔥 一句话必杀总结（直接背）
 
@@ -87,24 +86,21 @@ Foo.prototype.b = { x: 1 }
 
 obj1.b.x = 2
 
-console.log(obj2.b.x) // ?
+```js
+console.log(obj2.b.x); // ?
+```
 
-👉 正确答案是：
-2
-❗ 因为这次没有改引用指向，只是改了引用内部的值
+- 正确答案是：
+  2
+  ❗ 因为这次没有改引用指向，只是改了引用内部的值
 
-⸻
+---
 
 🧠 终极区分口诀（原型地狱逃生用）
 
-操作
-结果
-obj.a = xxx
-在 obj 上创建/覆盖属性
-obj.a.x = xxx
-修改共享引用对象
-读属性
-沿原型链找
-写属性
-永远只写当前对象
+| 操作                   | 结果          | obj.a = xxx      |
+| ---------------------- | ------------- | ---------------- |
+| 在 obj 上创建/覆盖属性 | obj.a.x = xxx | 修改共享引用对象 |
+| 读属性                 | 沿原型链找    | 写属性           |
 
+永远只写当前对象
