--- a/2/day3_proto_prototype_constructor终极图解原型链/面试题.md
+++ b/2/day3_proto_prototype_constructor终极图解原型链/面试题.md
@@ -1,6 +1,6 @@
 Q1：proto 与 prototype 的区别？
 
-__proto__ 在实例上，指向构造函数的 prototype；
+**proto** 在实例上，指向构造函数的 prototype；
 prototype 在构造函数上，用于定义实例共享方法。
 
 Q2：constructor 作用？
@@ -10,4 +10,3 @@ Q2：constructor 作用？
 Q3：原型链查找顺序？
 
 先查实例 → 再查 proto → 上一级原型 → … → Object.prototype → null。
-
