--- a/2/day3_proto_prototype_constructor终极图解原型链/面试题1.md
+++ b/2/day3_proto_prototype_constructor终极图解原型链/面试题1.md
@@ -1,87 +1,64 @@
-
-⸻
-
+---
 1️⃣ 核心概念关系
 
-名称
-含义
-指向关系
-实例 (instance)
-通过构造函数 new 出来的对象
-__proto__ 指向构造函数的 prototype
-proto / [[Prototype]]
-每个对象内部的隐藏属性，指向原型对象
-实现原型链查找
-构造函数 (Constructor)
-用于创建实例的函数
-instance.constructor === Constructor
+| 名称 | 含义 | 指向关系 | 实例 (instance) |
+| --- | --- | --- | --- |
+| 通过构造函数 new 出来的对象 | __proto__ 指向构造函数的 prototype | proto / [[Prototype]] | 每个对象内部的隐藏属性，指向原型对象 |
+| 实现原型链查找 | 构造函数 (Constructor) | 用于创建实例的函数 | instance.constructor === Constructor |
 prototype
 构造函数的属性，存放实例共享方法和属性
 Constructor.prototype.constructor === Constructor
-
-
-⸻
+---
 
 2️⃣ 关系图
 
 实例对象 (instance)
-  |
-  |__ __proto__ --> 构造函数的 prototype (Constructor.prototype)
-                        |
-                        |__ constructor --> 构造函数 (Constructor)
-                        |
-                        |__ __proto__ --> Object.prototype
-                                           |
-                                           |__ __proto__ --> null
+|
+|\_\_ **proto** --> 构造函数的 prototype (Constructor.prototype)
+|
+|** constructor --> 构造函数 (Constructor)
+|
+|** **proto** --> Object.prototype
+|
+|\_\_ **proto** --> null
 
-解释：
-	1.	instance.__proto__ 指向 Constructor.prototype
-	2.	Constructor.prototype.constructor 指回构造函数本身
-	3.	所有对象的最终原型链都到 Object.prototype
-	4.	Object.prototype.__proto__ === null 表示原型链终点
+解释：1. instance.**proto** 指向 Constructor.prototype 2. Constructor.prototype.constructor 指回构造函数本身 3. 所有对象的最终原型链都到 Object.prototype 4. Object.prototype.**proto** === null 表示原型链终点
 
-⸻
+---
 
 3️⃣ 原型链查找机制
 
-当你访问 instance.prop 时：
-	1.	先找实例自身属性
+当你访问 instance.prop 时：1. 先找实例自身属性
 
-	instance.hasOwnProperty('prop')
+    instance.hasOwnProperty('prop')
 
-	2.	找不到则沿 __proto__ 往上查
-	•	instance.__proto__
-	•	instance.__proto__.__proto__ …直到 null
-	3.	如果最终找不到，返回 undefined
+    2.	找不到则沿 __proto__ 往上查
 
-⚠️ 注意：实例属性会覆盖同名 prototype 属性
+- instance.**proto**
+- instance.**proto**.**proto** …直到 null 3. 如果最终找不到，返回 undefined
 
-⸻
+## ⚠️ 注意：实例属性会覆盖同名 prototype 属性
 
 4️⃣ 原型链继承实战关键
 
-function Parent() {
-  this.name = 'parent';
-}
-Parent.prototype.sayHi = function() {
-  console.log('Hi, ' + this.name);
-};
+| function Parent() {                   | this.name = 'parent';              | }   |
+| ------------------------------------- | ---------------------------------- | --- |
+| Parent.prototype.sayHi = function() { | console.log('Hi, ' + this.name);   | };  |
+| function Child() {                    | Parent.call(this); // 继承实例属性 | }   |
 
-function Child() {
-  Parent.call(this); // 继承实例属性
-}
 Child.prototype = Object.create(Parent.prototype); // 继承方法
 Child.prototype.constructor = Child; // 修复 constructor 指向
 
+```js
 const c = new Child();
+```
+
 c.sayHi(); // Hi, parent
 
 ✅ 实战要点：
-	•	实例属性放在构造函数内部（每个实例独立）
-	•	方法尽量放在 prototype 上（节省内存）
-	•	原型链继承理解是搞懂 class 和框架底层继承的核心
 
-⸻
+- 实例属性放在构造函数内部（每个实例独立）
+- 方法尽量放在 prototype 上（节省内存）
+- 原型链继承理解是搞懂 class 和框架底层继承的核心
 
-
-							
+---
