--- a/1/js1/day5_ES6/面试题1.md
+++ b/1/js1/day5_ES6/面试题1.md
@@ -5,16 +5,14 @@
 下面代码会输出什么？为什么？
 
 ```js
-const user = {
-name: 'Tom',
-age: 18
-};
-
-
-function log(strings, ...values) {
-console.log(strings);
+| const user = { | name: 'Tom', |
+| --- | --- |
+| age: 18 | }; |
+| function log(strings, ...values) { | console.log(strings); |
+```js
 console.log(values);
 
+```
 }
 
 ## log`用户：${user.name}，年龄：${user.age}`;
@@ -62,15 +60,19 @@ values = ['Tom', 18]
 // A
 
 ```js
+```js
 function fetchData(options) {
 const url = options.url;
 const method = options.method || 'GET';
 
 
+```
 }
 
 
+```js
 function fetchData({ url, method = "GET" }) {}
+```
 ```
 
 ❌ 常见错误回答
@@ -94,7 +96,9 @@ options.method || 'GET'
 核心区别 2：B 在参数语义上更明确
 
 ```js
+```js
 fetchData({ url, method });
+```
 ```
 
 - 调用点即文档
@@ -107,13 +111,17 @@ fetchData({ url, method });
 ❌ B 会直接报错：
 
 ```js
+```js
 fetchData(); // Cannot destructure property 'url' of undefined
+```
 ```
 
 ✅ 正确写法：
 
 ```js
+```js
 function fetchData({ url, method = "GET" } = {}) {}
+```
 ```
 
 - 90% 人忘了这个
