--- a/1/js4/day3_事件冒泡与捕获/面试题.md
+++ b/1/js4/day3_事件冒泡与捕获/面试题.md
@@ -1,56 +1,37 @@
 1️⃣ 捕获阶段和冒泡阶段有什么区别？
 
-概念：
-事件流由三个阶段组成：捕获阶段 → 目标阶段 → 冒泡阶段
-
-阶段
-触发顺序
-事件监听器设置
-作用
-捕获阶段 (Capturing)
-从最外层 document 向事件目标 target 逐层触发
-addEventListener('click', fn, true) 中 true
-先行捕获事件，可以在事件到达目标前处理或阻止事件
-目标阶段 (Target)
-事件到达目标元素时触发
-不论 true/false 都会触发
-目标元素自身处理事件
-冒泡阶段 (Bubbling)
-从目标元素向外层父元素逐层冒泡
-addEventListener('click', fn, false) 或默认
-常用于事件委托，统一处理子元素事件
-
+| 概念 | 事件流由三个阶段组成：捕获阶段 → 目标阶段 → 冒泡阶段 |
+| --- | --- |
+| 阶段 | 触发顺序 |
+| 事件监听器设置 | 作用 |
+| 捕获阶段 (Capturing) | 从最外层 document 向事件目标 target 逐层触发 |
+| addEventListener('click', fn, true) 中 true | 先行捕获事件，可以在事件到达目标前处理或阻止事件 |
+| 目标阶段 (Target) | 事件到达目标元素时触发 |
+| 不论 true/false 都会触发 | 目标元素自身处理事件 |
+| 冒泡阶段 (Bubbling) | 从目标元素向外层父元素逐层冒泡 |
+| addEventListener('click', fn, false) 或默认 | 常用于事件委托，统一处理子元素事件 |
 面试加分点：
-	•	捕获阶段很少用，冒泡阶段最常用。
-	•	stopPropagation() 可以阻止冒泡，但不会阻止捕获阶段已经触发的事件。
-
-⸻
+- 捕获阶段很少用，冒泡阶段最常用。
+- stopPropagation() 可以阻止冒泡，但不会阻止捕获阶段已经触发的事件。
+---
 2️⃣ e.target 和 e.currentTarget 的区别？
-	•	e.target：事件实际发生的元素（事件源），可能是子元素。
-	•	e.currentTarget：事件绑定的元素（事件监听器所在的元素），是事件流中当前触发的节点。
+- e.target：事件实际发生的元素（事件源），可能是子元素。
+- e.currentTarget：事件绑定的元素（事件监听器所在的元素），是事件流中当前触发的节点。
 
-	<div id="parent">
-  <button id="btn">点击我</button>
-</div>
-<script>
-  const parent = document.getElementById('parent');
-  parent.addEventListener('click', (e) => {
-    console.log('target:', e.target.id);        // btn
-    console.log('currentTarget:', e.currentTarget.id); // parent
-  });
+| <div id="parent"> | <button id="btn">点击我</button> | </div> |
+| --- | --- | --- |
+| <script> | const parent = document.getElementById('parent'); | parent.addEventListener('click', (e) => { |
+| console.log('target:', e.target.id);        // btn | console.log('currentTarget:', e.currentTarget.id); // parent | }); |
 </script>
 
 解释：点击按钮，事件冒泡到父元素。
-	•	target 是真正触发事件的按钮 btn
-	•	currentTarget 是父元素 parent，因为事件监听器绑定在父元素上
-
-⸻
-
+- target 是真正触发事件的按钮 btn
+- currentTarget 是父元素 parent，因为事件监听器绑定在父元素上
+---
 3️⃣ 为什么阻止冒泡不影响捕获阶段？
-	•	捕获阶段在事件到达目标前执行
-	•	stopPropagation() 阻止的是 事件继续向上传播（冒泡）或向下传播
-	•	如果在捕获阶段执行 stopPropagation()，冒泡阶段会被阻止，但捕获阶段已经执行完毕，所以不影响已经触发的捕获阶段监听器
+- 捕获阶段在事件到达目标前执行
+- stopPropagation() 阻止的是 事件继续向上传播（冒泡）或向下传播
+- 如果在捕获阶段执行 stopPropagation()，冒泡阶段会被阻止，但捕获阶段已经执行完毕，所以不影响已经触发的捕获阶段监听器
 
 💡 小结：阻止冒泡不影响捕获阶段，因为捕获阶段先于冒泡阶段执行
-
-⸻
+---
