--- a/1/js4/面试题1.md
+++ b/1/js4/面试题1.md
@@ -7,69 +7,64 @@
 导致浏览器不停地 Layout → 读取 → Layout。
 
 3️⃣ 为什么 classList 比 style 修改更优？
-	•	style 是逐条声明，容易多次触发布局
-	•	class 是一次性样式切换
-	•	CSS 可被浏览器统一合并、缓存、优化
+- style 是逐条声明，容易多次触发布局
+- class 是一次性样式切换
+- CSS 可被浏览器统一合并、缓存、优化
 
 4️⃣ 为什么 appendChild 放在循环里很慢？
 每次 append 都会：
-	•	改变 DOM 树
-	•	可能触发 Layout + Paint
+- 改变 DOM 树
+- 可能触发 Layout + Paint
 
 正确方式是 DocumentFragment / innerHTML 一次性插入
 
 5️⃣ innerHTML 一定比 createElement 快吗？
-	•	大量静态结构：innerHTML 更快
-	•	频繁增删 / 动态绑定：createElement 更安全
+- 大量静态结构：innerHTML 更快
+- 频繁增删 / 动态绑定：createElement 更安全
 
 innerHTML 会触发：
-	•	HTML 解析
-	•	DOM 重建
-	•	原节点事件丢失
+- HTML 解析
+- DOM 重建
+- 原节点事件丢失
 
 6️⃣ 哪些 CSS 属性最容易引发性能问题？
 满分关键词
-	•	❌ Layout：width / height / margin / padding / top / left
-	•	⚠️ Paint：background / box-shadow / border-radius
-	•	✅ Composite：transform / opacity
-
-⸻
-
+- ❌ Layout：width / height / margin / padding / top / left
+- ⚠️ Paint：background / box-shadow / border-radius
+- ✅ Composite：transform / opacity
+---
 7️⃣ 为什么 transform 不影响文档流？
 transform 发生在 合成阶段，
 元素的 几何盒模型未发生变化，
 所以不会重新计算布局。
 
 8️⃣ requestAnimationFrame 能解决什么问题？
-	•	把 DOM 操作放到 浏览器下一帧渲染前
-	•	避免掉帧
-	•	合并多次 DOM 更新
-	•	与刷新率同步
+- 把 DOM 操作放到 浏览器下一帧渲染前
+- 避免掉帧
+- 合并多次 DOM 更新
+- 与刷新率同步
 
 9️⃣ 虚拟 DOM 一定比原生 DOM 快吗？
 ❌ 不是一定更快
 ✅ 它的优势是：
-	•	减少不必要的 DOM 操作
-	•	批量更新
-	•	跨平台抽象
+- 减少不必要的 DOM 操作
+- 批量更新
+- 跨平台抽象
 
 极少量 DOM 更新时，原生更快。
 
 🔟 如何在真实项目中避免 DOM 性能问题？
 
 满分答案清单
-	•	✅ 合并 DOM 操作
-	•	✅ 避免读写交叉
-	•	✅ 用 class 替代 style
-	•	✅ 动画只用 transform / opacity
-	•	✅ 长列表用虚拟列表
-	•	✅ rAF / 防抖 / 节流
-	•	✅ 事件委托减少监听数量
-	•	✅ 批量处理数据，避免实时操作 DOM
-
-
-⸻
-
+- ✅ 合并 DOM 操作
+- ✅ 避免读写交叉
+- ✅ 用 class 替代 style
+- ✅ 动画只用 transform / opacity
+- ✅ 长列表用虚拟列表
+- ✅ rAF / 防抖 / 节流
+- ✅ 事件委托减少监听数量
+- ✅ 批量处理数据，避免实时操作 DOM
+---
 🧠 面试官一听就知道你是老前端的总结句
 
 DOM 性能问题的本质不是 JS 慢，
