--- a/js/2/面试题2.md
+++ b/js/2/面试题2.md
@@ -1,46 +1,34 @@
-一、什么是限流（Throttle）
+# 什么是限流（Throttle）
 
 在单位时间内，函数最多执行一次
 
 📌 核心目的：
-	•	防止高频事件（scroll / resize / mousemove / touchmove）疯狂触发
-	•	控制执行频率，降低性能消耗
+- 防止高频事件（scroll / resize / mousemove / touchmove）疯狂触发
+- 控制执行频率，降低性能消耗
+---
+## 限流 vs 防抖（面试必问）
 
-⸻
-
-二、限流 vs 防抖（面试必问）
-
-对比点
-防抖 debounce
-限流 throttle
-触发策略
-停止触发后执行
-固定时间间隔执行
-高频操作
-❌ 不适合连续反馈
-✅ 适合持续反馈
-场景
-输入框搜索
-滚动监听 / 拖拽
-
-
-👉 一句话秒杀面试官：
+| 对比点 | 防抖 debounce | 限流 throttle | 触发策略 |
+| --- | --- | --- | --- |
+| 停止触发后执行 | 固定时间间隔执行 | 高频操作 | ❌ 不适合连续反馈 |
+| ✅ 适合持续反馈 | 场景 | 输入框搜索 | 滚动监听 / 拖拽 |
+- 一句话秒杀面试官：
 
 防抖是「等你停下来再做」，限流是「你再急我也按节奏来」
-
-⸻
-
-三、基础版限流（时间戳）
+---
+## 基础版限流（时间戳）
 
 特点
-	•	首次立即执行
-	•	末尾可能丢失一次
+- 首次立即执行
+- 末尾可能丢失一次
 
+```js
 	function throttle(fn, delay) {
   let lastTime = 0
   return function (...args) {
     const now = Date.now()
     if (now - lastTime >= delay) {
+```
       lastTime = now
       fn.apply(this, args)
     }
@@ -48,24 +36,24 @@
 }
 
 📌 适合：
-	•	scroll 实时位置计算
-	•	页面滚动埋点
+- scroll 实时位置计算
+- 页面滚动埋点
 
 ⚠️ 缺点：
-	•	最后一次触发可能执行不到（面试会追问）
-
-⸻
-
-四、定时器版限流（setTimeout）
+- 最后一次触发可能执行不到（面试会追问）
+---
+## 定时器版限流（setTimeout）
 
 特点
-	•	首次不立即执行
-	•	一定会执行最后一次
+- 首次不立即执行
+- 一定会执行最后一次
 
+```js
 	function throttle(fn, delay) {
   let timer = null
   return function (...args) {
     if (!timer) {
+```
       timer = setTimeout(() => {
         timer = null
         fn.apply(this, args)
@@ -74,17 +62,16 @@
   }
 }
 📌 适合：
-	•	resize 后重新计算布局
-	•	希望结果“完整”的场景
-
-⸻
-
-五、高阶版限流（首尾可控｜面试加分）
+- resize 后重新计算布局
+- 希望结果“完整”的场景
+---
+## 高阶版限流（首尾可控｜面试加分）
 
 支持配置：
-	•	leading：是否首次立即执行
-	•	trailing：是否结束后补一次
+- leading：是否首次立即执行
+- trailing：是否结束后补一次
 
+```js
 	function throttle(fn, delay, options = {}) {
   let lastTime = 0
   let timer = null
@@ -94,13 +81,16 @@
     const now = Date.now()
 
     if (!lastTime && !leading) {
+```
       lastTime = now
     }
 
+```js
     const remaining = delay - (now - lastTime)
 
     if (remaining <= 0) {
       if (timer) {
+```
         clearTimeout(timer)
         timer = null
       }
@@ -117,17 +107,17 @@
 }
 
 🎯 这是 lodash.throttle 的核心思想
-
-⸻
-
-六、requestAnimationFrame 限流（性能王者）
+---
+## requestAnimationFrame 限流（性能王者）
 
 适合动画 / 滚动联动
 
+```js
 function throttleRAF(fn) {
   let locked = false
   return function (...args) {
     if (locked) return
+```
     locked = true
     requestAnimationFrame(() => {
       fn.apply(this, args)
@@ -136,16 +126,14 @@ function throttleRAF(fn) {
   }
 }
 🚀 优点：
-	•	自动对齐浏览器刷新率（≈16.6ms）
-	•	比 setTimeout 更流畅
+- 自动对齐浏览器刷新率（≈16.6ms）
+- 比 setTimeout 更流畅
 
 📌 用途：
-	•	滚动吸顶
-	•	视差滚动
-	•	拖拽动画
-
-⸻
-
+- 滚动吸顶
+- 视差滚动
+- 拖拽动画
+---
 七、面试官「追杀级」追问 & 标准回答
 
 Q1：为什么 scroll 必须限流？
@@ -153,25 +141,19 @@ Q1：为什么 scroll 必须限流？
 ✅ 答：
 
 scroll 每一像素都会触发事件，不限流会导致频繁 JS 执行、回流重绘、页面卡顿
-
-⸻
-
+---
 Q2：限流为什么比防抖更适合滚动？
 
 ✅ 答：
 
 滚动过程需要持续反馈，防抖只会在停止时触发，体验不连续
-
-⸻
-
+---
 Q3：如何保证最后一次一定执行？
 
 ✅ 答：
 
 使用 trailing + 定时器补偿，或者时间戳 + setTimeout 组合
-
-⸻
-
+---
 Q4：为什么 rAF 比 setTimeout 更适合动画？
 
 ✅ 答：
@@ -186,19 +168,16 @@ rAF 与浏览器渲染节奏同步，避免掉帧和无效渲染
 🧨 场景题（真实业务）
 
 页面是一个长列表商品页：
-
-	•	商品列表是异步分页加载（滚动到底部继续加载）
-	•	每个商品卡片都有：
-	•	mousemove 显示浮层
-	•	click 进入详情
-	•	页面还需要：
-	•	滚动时显示 / 隐藏吸顶导航
-	•	实时上报用户滚动位置（埋点）
+- 商品列表是异步分页加载（滚动到底部继续加载）
+- 每个商品卡片都有：
+- mousemove 显示浮层
+- click 进入详情
+- 页面还需要：
+- 滚动时显示 / 隐藏吸顶导航
+- 实时上报用户滚动位置（埋点）
 
 ⚠️ 商品节点是动态生成的
-
-⸻
-
+---
 ❓问题 1（事件委托）
 
 Q：为什么这里必须用事件委托？不用会怎样？
@@ -209,15 +188,16 @@ Q：为什么这里必须用事件委托？不用会怎样？
 1️⃣ 新节点需要重复绑定
 2️⃣ 节点销毁后容易造成内存泄漏
 3️⃣ 大量监听器增加内存和事件派发成本
-
-👉 使用事件委托：
-	•	只在父容器绑定一次
-	•	利用事件冒泡
-	•	自动支持动态节点
+- 使用事件委托：
+- 只在父容器绑定一次
+- 利用事件冒泡
+- 自动支持动态节点
 
 	list.addEventListener('click', (e) => {
+```js
   const item = e.target.closest('.item')
   if (!item) return
+```
   // 处理点击
 })
 
@@ -225,9 +205,7 @@ Q：为什么这里必须用事件委托？不用会怎样？
 
 为什么阻止冒泡不会影响事件委托？
 ✅ 因为委托监听在冒泡阶段，阻止的是后续冒泡，不影响捕获阶段的事件传递。
-
-⸻
-
+---
 ❓问题 2（mousemove 为什么必须防抖）
 
 Q：为什么 mousemove 不能直接处理？为什么不用限流？
@@ -235,15 +213,16 @@ Q：为什么 mousemove 不能直接处理？为什么不用限流？
 ✅ 满分回答
 
 mousemove 触发频率极高，如果每次都执行逻辑：
-	•	会频繁计算 DOM 位置
-	•	触发重排 / 重绘
-	•	页面严重掉帧
+- 会频繁计算 DOM 位置
+- 触发重排 / 重绘
+- 页面严重掉帧
+- 这里使用 防抖：
+- 只有用户停下来才展示浮层
+- 避免无意义中间态计算
 
-👉 这里使用 防抖：
-	•	只有用户停下来才展示浮层
-	•	避免无意义中间态计算
-
+```js
 	const showTip = debounce((item) => {
+```
   // 计算并显示浮层
 }, 200)
 
@@ -251,9 +230,7 @@ mousemove 触发频率极高，如果每次都执行逻辑：
 
 如果希望移动中也能看到跟随效果？
 ✅ 改用 rAF 限流，而不是防抖。
-
-⸻
-
+---
 ❓问题 3（scroll 为什么用限流而不是防抖）
 
 Q：滚动监听为什么必须限流？
@@ -261,13 +238,15 @@ Q：滚动监听为什么必须限流？
 ✅ 满分回答
 
 滚动过程中需要持续反馈：
-	•	是否显示吸顶
-	•	是否触底加载
-	•	是否上报埋点
+- 是否显示吸顶
+- 是否触底加载
+- 是否上报埋点
 
 防抖只会在滚动停止后触发，不符合需求。
 
+```js
 const onScroll = throttle(() => {
+```
   checkSticky()
   checkLoadMore()
   reportScroll()
@@ -277,9 +256,7 @@ const onScroll = throttle(() => {
 
 为什么埋点不能用防抖？
 ✅ 因为防抖会丢失过程数据，无法反映用户真实滚动行为。
-
-⸻
-
+---
 ❓问题 4（事件委托 + 限流组合）
 
 Q：scroll + click 同时存在，会不会互相影响？
@@ -287,16 +264,14 @@ Q：scroll + click 同时存在，会不会互相影响？
 ✅ 满分回答
 
 不会。
-	•	scroll 是 window 级事件
-	•	click 通过事件委托绑定在列表容器
-	•	各自独立的事件系统，不共享调用栈
+- scroll 是 window 级事件
+- click 通过事件委托绑定在列表容器
+- 各自独立的事件系统，不共享调用栈
 
 但需要注意：
-	•	scroll 回调必须限流
-	•	click 内部避免复杂同步逻辑
-
-⸻
-
+- scroll 回调必须限流
+- click 内部避免复杂同步逻辑
+---
 ❓问题 5（手写组合实现）
 
 Q：请你设计一个高性能方案
@@ -317,17 +292,17 @@ list.addEventListener(
 )
 
 // hover 防抖
+```js
 const showTip = debounce(renderTooltip, 200)
 
+```
 🎯 一句话总结方案：
 
 滚动 → 限流
 高频移动 → rAF 限流
 非实时反馈 → 防抖
 动态节点 → 事件委托
-
-⸻
-
+---
 🧠 终极追杀题（99% 人翻车）
 
 Q：如果 throttle + 事件委托一起用，this 指向谁？
@@ -335,16 +310,12 @@ Q：如果 throttle + 事件委托一起用，this 指向谁？
 ✅ 标准答案
 
 this 取决于：
-	•	throttle 内部是否 fn.apply(this)
-	•	事件触发时 this 默认指向绑定元素
-
-👉 正确写法：
+- throttle 内部是否 fn.apply(this)
+- 事件触发时 this 默认指向绑定元素
+- 正确写法：
 
 fn.apply(this, args)
-
-
-⸻
-
+---
 🏆 面试终极一句话
 
 事件委托解决“谁监听”
