提交面试题

--- a/react/day12_React Router_SPA 页面导航_URL 参数管理/面试题.md
+++ b/react/day12_React Router_SPA 页面导航_URL 参数管理/面试题.md
@@ -127,3 +127,18 @@ const resetForm = () => setForm(initialValues);
 	•	如果初始值是 动态的，建议在 Hook 内用 useRef 保存最初的状态。
 	•	对于复杂表单（嵌套对象/数组），需要做深拷贝以避免引用污染。
 
+
+🟢 Day 13：嵌套路由 + Layout + 路由权限控制
+
+Q1：为什么不用 if 判断登录？
+
+路由层统一控制，解耦页面逻辑，结构更清晰
+
+Q2：Outlet 是什么？
+
+子路由占位符，决定子页面渲染位置
+
+Q3：权限控制一般写在哪？
+
+路由层 / 高阶组件，而不是业务组件内部
+
